--- a/README.org
+++ b/README.org
@@ -72,6 +72,9 @@ its content.
 
 ** Marzo 2025
 
+*** 29-Mar-25
++ [[https://arxiv.org/abs/2503.19605][Lean formalization of generalization error bound by Rademacher complexity]]. ~ Sho Sonoda, Kazumi Kasaura, Yuma Mizuno, Kei Tsukamoto, Naoto Onda. #ITP #LeanProver
+
 *** 28-Mar-25
 + [[https://raw.githubusercontent.com/gteege/gentle-isabelle/refs/heads/main/man-isabelle.pdf][A gentle introduction to Isabelle and Isabelle/HOL]]. ~ Gunnar Teege. #ITP #IsabelleHOL
 + [[https://youtu.be/rmMYFmlUbJ8][Verified collaboration: How Lean is transforming mathematics, programming, and AI]]. ~ Leonardo de Moura. #ITP #LeanProver #Math #Programming #AI
